# sara

./: .gitignore  .release-plz.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  clippy.toml
.claude/skills/ms-rust/: 01_ai_guidelines.md  02_application_guidelines.md  03_documentation.md  04_ffi_guidelines.md  05_library_guidelines.md  06_performance_guidelines.md  07_safety_guidelines.md  08_universal_guidelines.md  09_libraries_building_guidelines.md  10_libraries_interoperability_guidelines.md  11_libraries_resilience_guidelines.md  12_libraries_ux_guidelines.md  SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  version-bump.yml
.specify/memory/: constitution.md
assets/vhs/: common.tape  demo-init.tape  demo.tape
examples/smart-home/: README.md
examples/smart-home/adrs/: ADR-001.md  ADR-002.md  ADR-003.md
examples/smart-home/detailed_design/: HWDD-HUBBOARD.md  HWDD-ZIGBEE.md  SWDD-ALERTPUSH.md  SWDD-MQTT.md
examples/smart-home/hardware_requirements/: HWREQ-HUB.md  HWREQ-ZIGBEE.md
examples/smart-home/scenarios/: SCEN-DIMMER.md  SCEN-INTRUSION.md
examples/smart-home/software_requirements/: SWREQ-MQTTCLIENT.md  SWREQ-PUSHSDK.md
examples/smart-home/solutions/: SOL-SMARTHOME.md
examples/smart-home/system_architecture/: SYSARCH-COMM.md
examples/smart-home/system_requirements/: SYSREQ-ALERT.md  SYSREQ-LATENCY.md
examples/smart-home/use_cases/: UC-LIGHTS.md  UC-SECURITY.md
sara-cli/: CHANGELOG.md  Cargo.toml  README.md
sara-cli/src/: logging.rs  main.rs
sara-cli/src/commands/: check.rs  diff.rs  edit.rs  init.rs  interactive.rs  mod.rs  parse.rs  query.rs  report.rs  schema.rs  validate.rs
sara-cli/src/output/: formatter.rs  mod.rs  progress.rs
sara-cli/tests/: cli_tests.rs
sara-core/: CHANGELOG.md  Cargo.toml  README.md
sara-core/src/: error.rs  lib.rs  test_utils.rs
sara-core/src/config/: mod.rs  settings.rs
sara-core/src/diff/: mod.rs  options.rs  service.rs
sara-core/src/edit/: mod.rs  options.rs  service.rs
sara-core/src/generator/: markdown.rs  mod.rs  yaml.rs
sara-core/src/graph/: builder.rs  diff.rs  knowledge_graph.rs  mod.rs  stats.rs  traversal.rs
sara-core/src/init/: mod.rs  options.rs  service.rs
sara-core/src/model/: adr.rs  builder.rs  edit.rs  field.rs  fields.rs  init.rs  item.rs  metadata.rs  mod.rs  refs.rs  relationship.rs
sara-core/src/parser/: frontmatter.rs  markdown.rs  mod.rs  yaml.rs
sara-core/src/query/: mod.rs  traceability.rs
sara-core/src/report/: coverage.rs  matrix.rs  mod.rs
sara-core/src/repository/: git.rs  mod.rs  scanner.rs
sara-core/src/schema/: active.rs  builtin.rs  mod.rs  parity_tests.rs  yaml.rs
sara-core/src/service/: diff.rs  edit.rs  init.rs  mod.rs
sara-core/src/template/: generator.rs  mod.rs
sara-core/src/validation/: mod.rs  report.rs  rule.rs  validator.rs
sara-core/src/validation/rules/: broken_refs.rs  cycles.rs  duplicates.rs  metadata.rs  mod.rs  orphans.rs  redundant.rs  relationships.rs
sara-core/templates/: adr.tera  adr_frontmatter.tera  frontmatter.tera  generic.tera  hardware_detailed_design.tera  hardware_detailed_design_frontmatter.tera  hardware_requirement.tera  hardware_requirement_frontmatter.tera  scenario.tera  scenario_frontmatter.tera  software_detailed_design.tera  software_requirement.tera  solution.tera  solution_frontmatter.tera  system_architecture.tera  system_architecture_frontmatter.tera  system_requirement.tera  use_case.tera
sara-core/tests/: active_schema_overrides.rs  custom_relation_end_to_end.rs  custom_type_end_to_end.rs  generator_schema_driven.rs  parse_generate_round_trip.rs
specs/001-requirements-knowledge-graph/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-requirements-knowledge-graph/checklists/: requirements.md
specs/001-requirements-knowledge-graph/contracts/: cli.md
specs/002-adr-management/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-adr-management/checklists/: requirements.md
specs/002-adr-management/contracts/: cli-interface.md
specs/003-mcp-connector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-mcp-connector/checklists/: requirements.md
specs/003-mcp-connector/contracts/: mcp-resources.json  mcp-tools.json
tests/fixtures/broken_refs/: SYSREQ-001.md  UC-001.md
tests/fixtures/corrupt_file/: CORRUPT-001.md  SOL-001.md
tests/fixtures/cycles/: SCEN-A.md  SCEN-B.md
tests/fixtures/duplicates/: SOL-001-duplicate.md  SOL-001.md
(+19 files in other folders)
