[workspace]
resolver = "2"
members = [
    "sara-core",
    "sara-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
authors = ["Sara Team"]
license = "Apache-2.0"
repository = "https://github.com/cledouarec/sara"

[workspace.dependencies]
# Graph data structure
petgraph = "0.8.3"

# CLI argument parsing
clap = { version = "4.5.54", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.13"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0.149"
toml = "0.9.11"

# Git operations (vendored OpenSSL for cross-compilation support)
git2 = { version = "0.20.3", features = ["vendored-openssl"] }

# Terminal output
colored = "3.0.0"
console = "0.16.2"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Error handling
thiserror = "2.0.17"

# Parallel processing
rayon = "1.11.0"

# Glob pattern matching
glob = "0.3.3"

# Fuzzy string matching
strsim = "0.11.1"

# Templating
tera = "1.20.1"

# Progress indicators
indicatif = "0.18.3"

# Interactive prompts
inquire = "0.9.1"

# Testing
assert_cmd = "2.1.2"
predicates = "3.1.3"
tempfile = "3.24.0"
