[package]
name = "sara-cli"
description = "CLI for Sara - Requirements Knowledge Graph"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sara"
path = "src/main.rs"

[dependencies]
sara-core = { path = "../sara-core", version = "0.5.0" }
clap.workspace = true
colored.workspace = true
console.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
inquire.workspace = true
thiserror.workspace = true
strsim.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
