[package]
name = "sara-core"
description = "Core library for Sara - Requirements Knowledge Graph CLI"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
petgraph.workspace = true
pulldown-cmark.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
toml.workspace = true
git2.workspace = true
tracing.workspace = true
thiserror.workspace = true
rayon.workspace = true
glob.workspace = true
strsim.workspace = true
tera.workspace = true

[dev-dependencies]
tempfile = "3"
