[package]
name = "sara-core"
description = "Core library for Sara - Requirements Knowledge Graph CLI"
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
petgraph.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
git2.workspace = true
tracing.workspace = true
thiserror.workspace = true
rayon.workspace = true
strsim.workspace = true
tera.workspace = true

[dev-dependencies]
tempfile = "3"
